--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <img src="/img/load-gif.gif" alt="">
         </div>
     </div>
-    <div class="scrollytelling-container"></div>
+
+    <div class="scrollytelling-container key"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
