--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
 
     <div class="scrollytelling-container key"></div>
+    <div class="scrollytelling-2"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
